# astro-cal

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: api.rs  main.rs  models.rs  openweather.rs
src/components/: calendar.rs  header.rs  mod.rs
