[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
hifitime = "2"
chrono = { version = "0.4", features = ["serde"] }
geodate = "0.4"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }    
wasm-bindgen = "0.2"
web-sys = "0.3.60"
js-sys = "0.3.60"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version="1.4", features = ["macros"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
wasm-bindgen-futures = "0.4"
log = "0.4.6"
wasm-logger = "0.2.0"
icalendar = "0.13.3"
